--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,7 +8,7 @@
         <p>I'm a third year student at the Nông Lâm University</p>
         <p><strong>Short-term goal:</strong> Back-end developer or Front-end developer</p>
         <p><strong>Long-term goal:</strong> Fullstack developer</p>
-        <p class="d-flex flex-wrap" style="white-space: pre-line"><strong style="margin-right:2px">Email:</strong>khanhdoan.kd@gmail.com</p>
+        <p class="d-flex flex-wrap" style="white-space: pre-line"><strong style="margin-right:2px">Email:</strong>khanhdoan21.kd@gmail.com</p>
     </div>
     <div>
           <h3><strong>Strengths</strong></h3>
