--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -29,7 +29,7 @@
                   <a href="https://www.facebook.com/profile.php?id=100009058594002" target="blank" class="nav-link" style="color: var(--blue);"><i class="fab fa-facebook-f"></i></a>
               </li>
               <li class="nav-item">
-                  <a href="#" class="nav-link" style="color: var(--red-color)"><i class="fab fa-google"></i></a>
+                  <a href="mailto:khanhdoan21.kd@gmail.com" class="nav-link" style="color: var(--red-color)"><i class="fab fa-google"></i></a>
               </li>
               <li class="nav-item">
                   <a href="https://github.com/khanhdoan09" target="blank" class="nav-link"><i class="fab fa-github"></i></a>
