--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,7 +5,7 @@
     <div>
         <h3><strong>About</strong></h3>
         <p>My name is Đoàn Trần Phi Khánh</p>
-        <p>I'm a third year student at the Nông Lâm University</p>
+        <p>I'm a fourth year student at the Nong Lam University</p>
         <p><strong>Short-term goal:</strong> Back-end developer or Front-end developer</p>
         <p><strong>Long-term goal:</strong> Fullstack developer</p>
         <p class="d-flex flex-wrap" style="white-space: pre-line"><strong style="margin-right:2px">Email:</strong>khanhdoan21.kd@gmail.com</p>
