--- a/src/app/background/background.component.html
+++ b/src/app/background/background.component.html
@@ -7,7 +7,7 @@
           </div>
           <div class="intro--bold">I am {{introTextMain}} </div>
           <div class="intro--light intro--spacing text-dark">
-              I am a second 3 year student at Ho Chi Minh City University of Agriculture and Forestry
+              I am a fourth year student at Ho Chi Minh City University of Agriculture and Forestry
           </div>
       </div>
   </div>
