--- a/src/app/project/project detail/project-detail.component.html
+++ b/src/app/project/project detail/project-detail.component.html
@@ -14,7 +14,13 @@
       {{project.content}}
     </div>
     <div class="project__detail__tech">
-      <strong><a target="_blank" href="{{project.source}}"><i class="fab fa-github"></i> View Source</a></strong>
+      <strong><a target="_blank" href="{{project.source_1}}"><i class="fab fa-github"></i> Source
+        <span *ngIf="project.source_2!==''; else elseNumber">1</span>
+        <ng-template #elseNumber></ng-template>
+       </a></strong>
+      <strong>
+        <ng-template [ngIf]="project.source_2!==''"><a target="_blank" href="{{project.source_2}}"> Source 2</a></ng-template>
+      </strong>
     </div>
   </div>
 </div>
