--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,7 +17,7 @@
                   <a href="#home" class="nav-link active nav-link-text" id="nav-home" (click)='activeNavItem("nav-home")'>Home</a>
               </li>
               <li class="nav-item">
-                  <a href="https://drive.google.com/file/d/1ew0ZsXhpfD4vgK4JCoOrFzkRqIU5kpHq/view?usp=share_link" class="nav-link nav-link-text d-flex">My CV</a>
+                  <a href="https://drive.google.com/file/d/1qd0tdSZYWW7mlJTX12nZmTaQq9Jsqkfv/view?usp=sharing" class="nav-link nav-link-text d-flex">My CV</a>
               </li>
               <li class="nav-item">
                   <a href="#about" id="nav-about" class="nav-link nav-link-text" (click)='activeNavItem("nav-about")'>About</a>
